--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,13 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://localhost:8080/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
+DB_DATABASE=test
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
