--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ APP_URL=http://localhost:8080/
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test
+DB_DATABASE=studentData
 DB_USERNAME=root
 DB_PASSWORD=
 
